# metaphor-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
crates/metaphor-cli/: Cargo.toml
crates/metaphor-cli/src/: affected.rs  backbone_env.rs  cache.rs  cmd_add.rs  cmd_build.rs  cmd_clean.rs  cmd_compose.rs  cmd_deploy.rs  cmd_doctor.rs  cmd_env.rs  cmd_info.rs  cmd_plugin_add.rs  cmd_plugins.rs  cmd_sync.rs  graph.rs  main.rs  plugin_env.rs  repl.rs  run_many.rs
crates/metaphor-cli/src/plugins/: backbone_mobilegen.rs  backbone_schema.rs  mod.rs  schema.rs  webgen.rs
crates/metaphor-cli/tests/: cli.rs
crates/metaphor-plugin-api/: Cargo.toml
crates/metaphor-plugin-api/src/: lib.rs
crates/metaphor-scaffold/: Cargo.toml
crates/metaphor-scaffold/src/: lib.rs
crates/metaphor-workspace/: Cargo.toml
crates/metaphor-workspace/src/: lib.rs
docs/: DEPLOYMENT.md  PLAN.md  README.md  architecture.md  cli-reference.md  contributing.md  install.md  plugin-api.md  plugin-release-workflow.md  plugins.md  quickstart.md  roadmap.md  workspace.md
npm/: README.md  install.js  package.json
