[package]
name = "metaphor-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Metaphor: orchestrate independent project repos"

[[bin]]
name = "metaphor"
path = "src/main.rs"

[dependencies]
# Core
anyhow = { workspace = true }
clap = { workspace = true }

# Metaphor workspace crate
metaphor-workspace = { workspace = true }

# Color output
colored = "2"

# Logging
env_logger = "0.11"
