[package]
name = "metaphor-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Metaphor: orchestrate independent project repos"

[[bin]]
name = "metaphor"
path = "src/main.rs"

[dependencies]
# Core
anyhow = { workspace = true }
clap = { workspace = true }

# Metaphor workspace crate
metaphor-workspace = { workspace = true }

# JSON output
serde = { workspace = true }
serde_json = "1"

# Human-readable timestamps (cache stats)
chrono = { workspace = true }

# Color output
colored = "2"

# Logging
env_logger = "0.11"

# Task cache: content hashing + walking project trees
blake3 = "1"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
