[package]
name = "metaphor-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Metaphor: orchestrate independent project repos"

[[bin]]
name = "metaphor"
path = "src/main.rs"

[dependencies]
# Core
anyhow = { workspace = true }
clap = { workspace = true }

# Metaphor workspace crate
metaphor-workspace = { workspace = true }

# JSON / YAML output
serde = { workspace = true }
serde_json = "1"
serde_yaml = { workspace = true }

# Human-readable timestamps (cache stats)
chrono = { workspace = true }

# Color output
colored = "2"

# Logging
env_logger = "0.11"

# Task cache: content hashing + walking project trees
blake3 = "1"
walkdir = "2"

# Interactive REPL: line editing + history + shell-style arg splitting
rustyline = "14"
shell-words = "1"
dirs = "5"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
